force-app/main/default/objects/pse__Skill_Certification_Rating__c/fields/Cert_Status__c.field-meta.xml
<CustomField>
    <fullName>Cert_Status__c</fullName>
    <label>Cert Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>1 Behind</fullName>
            </value>
            <value>
                <fullName>&gt;1 Behind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>