force-app/main/default/objects/pse__Skill_Certification_Rating__c/fields/pse__Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Evaluation_Date__c</fullName>
    <description>Date on which the rating was evaluated.</description>
    <label>Evaluation Date</label>
    <type>Date</type>
</CustomField>