force-app/main/default/objects/pse__Skill_Certification_Rating__c/fields/pse__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Expiration_Date__c</fullName>
    <description>Date on which the skill or certification rating expires.</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>