force-app/main/default/objects/pse__Skill_Certification_Rating__c/fields/pse__Last_Used_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Last_Used_Date__c</fullName>
    <description>The date when the resource last used the skill.</description>
    <inlineHelpText>The date when the resource last used the skill.</inlineHelpText>
    <label>Last Used Date</label>
    <type>Date</type>
</CustomField>