force-app/main/default/objects/pse__Skill_Certification_Rating__c/fields/pse__Resource__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource__c</fullName>
    <description>The resource to which the rating applies.</description>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Skill and Certification Ratings</relationshipLabel>
    <relationshipName>Skill_Certification_Ratings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>