force-app/main/default/objects/pse__Skill_Certification_Rating__c/fields/pse__Skill_Certification__c.field-meta.xml
<CustomField>
    <fullName>pse__Skill_Certification__c</fullName>
    <description>The skill or certification to which the rating applies.</description>
    <label>Skill / Certification</label>
    <referenceTo>pse__Skill__c</referenceTo>
    <relationshipLabel>Resource Ratings</relationshipLabel>
    <relationshipName>Resource_Ratings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>