force-app/main/default/objects/pse__Skill_Certification_Rating__c/fields/Skill_Certification_Name__c.field-meta.xml
<CustomField>
    <fullName>Skill_Certification_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+Id,pse__Resource__r.psa_report__Resource_Name__c+&quot; &quot;+&quot;-&quot;+&quot; &quot;+pse__Skill_Certification__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill / Certification Name</label>
    <type>Text</type>
</CustomField>