force-app/main/default/objects/pse__Skill_Certification_Rating__c/fields/Skill_Name__c.field-meta.xml
<CustomField>
    <fullName>Skill_Name__c</fullName>
    <formula>IF(RecordType.Name=&quot;Skill&quot;,HYPERLINK(&quot;/&quot; &amp; pse__Skill_Certification__c, pse__Skill_Certification__r.Skill_Name__c),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill Name</label>
    <type>Text</type>
</CustomField>