force-app/main/default/objects/pse__Skill_Certification_Rating__c/fields/Skill_or_Certification__c.field-meta.xml
<CustomField>
    <fullName>Skill_or_Certification__c</fullName>
    <formula>TEXT(pse__Skill_Certification__r.pse__Skill_Or_Certification__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill or Certification</label>
    <type>Text</type>
</CustomField>