force-app/main/default/objects/pse__Skill_Certification_Rating__c/recordTypes/Certification.recordType-meta.xml
<RecordType>
    <fullName>Certification</fullName>
    <active>true</active>
    <label>Certification</label>
</RecordType>